--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ script:
   - sudo apt-get update && sudo apt-get install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev -y
   - ./bin/compile
 
-after_success: ./bin/archive
+#after_success: ./bin/archive
 
 #after_failure: cat /tmp/python-build.*.log
 
