--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,7 @@ jobs:
       dist: bionic
       env:
         - RELEASE=bionic
+        - NUMPY_VERSION=1.21.6
       name: bionic-ppc64le
 
     - <<: *defaults_linux
@@ -95,6 +96,7 @@ jobs:
       dist: xenial
       env:
         - RELEASE=xenial
+        - NUMPY_VERSION=1.21.6
       name: xenial-ppc64le
     
     - <<: *defaults_linux
@@ -102,6 +104,7 @@ jobs:
       dist: bionic
       env:
         - RELEASE=bionic
+        - NUMPY_VERSION=1.21.6
       name: bionic-s390x
 
     - <<: *defaults_linux
@@ -109,6 +112,7 @@ jobs:
       dist: xenial
       env:
         - RELEASE=xenial
+        - NUMPY_VERSION=1.21.6
       name: xenial-s390x
       
 allow_failures:
