--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,51 @@ jobs:
         - sudo python -m pip install --upgrade pip
         - sudo python -m pip install virtualenv==20.0.2
 
+            - <<: *defaults_linux
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy
+
+    - <<: *defaults_linux
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal
+
+    - <<: *defaults_linux
+      dist: bionic
+      env:
+        - RELEASE=bionic
+      name: bionic
+
+    # Dla xenial używamy własnego bloku install, nadpisując część z defaults_linux
+    - <<: *defaults_linux
+      dist: xenial
+      env:
+        - RELEASE=xenial
+      name: xenial
+      install:
+        - sudo apt-get update
+        - sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
+        - python3 --version
+        - python3 -m pip install --upgrade pip setuptools virtualenv
+
+    # Wersje dla architektury ppc64le
+    - <<: *defaults_linux
+      arch: ppc64le
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy-ppc64le
+
+    - <<: *defaults_linux
+      arch: ppc64le
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal-ppc64le
+
     - <<: *defaults_linux
       arch: ppc64le
       dist: bionic
@@ -98,7 +143,21 @@ jobs:
         - RELEASE=xenial
         - NUMPY_VERSION=1.21.6
       name: xenial-ppc64le
-    
+
+    - <<: *defaults_linux
+      arch: s390x
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy-s390x
+
+    - <<: *defaults_linux
+      arch: s390x
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal-s390x
+
     - <<: *defaults_linux
       arch: s390x
       dist: bionic
@@ -114,6 +173,34 @@ jobs:
         - RELEASE=xenial
         - NUMPY_VERSION=1.21.6
       name: xenial-s390x
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy-arm64
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal-arm64
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: bionic
+      env:
+        - RELEASE=bionic
+      name: bionic-arm64
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: xenial
+      env:
+        - RELEASE=xenial
+      name: xenial-arm64
       
 allow_failures:
   - name: freebsd
