--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ defaults_linux: &defaults_linux
     - sudo git pull
     - popd
     - alias python=python3
-    - pip install --upgrade pip setuptools virtualenv
+    - python3 -m pip install --upgrade pip setuptools virtualenv
     - |
       # "freeze" zamiast "list" aby uniknąć ostrzeżeń
       if (python -m pip freeze --user | cat | grep -qP '^virtualenv=='); then
@@ -92,11 +92,10 @@ jobs:
         - sudo git pull
         - popd
         - alias python=python3
-        # utworzenie wirtualnego środowiska
         - python3 -m venv ~/.venv
         - source ~/.venv/bin/activate
-        # aktualizacja pip, setuptools i virtualenv wewnątrz venv
-        - pip install --upgrade pip setuptools virtualenv
+        - python3 --version
+        - python3 -m pip install --upgrade pip setuptools virtualenv
 
     - <<: *defaults_linux
       arch: arm64
