--- a/.travis copy.yml
+++ b/.travis copy.yml
@@ -2,7 +2,7 @@ language: shell
 
 env:
   global:
-    - VERSION=3.10.5
+    - VERSION=3.9.9
   # - ALIAS=nightly
 
 # Wspólna konfiguracja dla jobów Linux
@@ -14,8 +14,18 @@ defaults_linux: &defaults_linux
     - sudo git pull
     - popd
     - alias python=python3
-    - python3 -m pip install --upgrade pip setuptools virtualenv
-
+    - python -m pip install virtualenv
+    - sudo pip install --upgrade pip
+    - sudo pip install setuptools
+    - |
+      # "freeze" zamiast "list" aby uniknąć ostrzeżeń
+      if (python -m pip freeze --user | cat | grep -qP '^virtualenv=='); then
+        python -m pip install --upgrade --user virtualenv
+      elif (python -m pip freeze | cat | grep -qP '^virtualenv=='); then
+        sudo python -m pip install --upgrade virtualenv
+      else
+        sudo python -m pip install virtualenv
+      fi
   before_script:
     - export INSTALL_DEST=${INSTALL_DEST:-/opt/python}
     - export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs)}
@@ -23,7 +33,8 @@ defaults_linux: &defaults_linux
     - export ARCH=${ARCH:-$(uname -m)}
     - export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}
     - export PYTHON_CONFIGURE_OPTS="--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS"
-    - sudo chown -R $USER $HOME/.cache
+    - sudo chown -R $USER $HOME/.cache 
+    - pip install --upgrade pip setuptools wheel       
     - |
       if [[ $VERSION = pypy*-dev ]]; then
         if ! [[ -f ~/virtualenv/pypy/bin/activate ]]; then
@@ -34,7 +45,7 @@ defaults_linux: &defaults_linux
         python --version
       fi
   script:
-    - sudo apt-get update && sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev gfortran libblas-dev liblapack-dev -y
+        - sudo apt-get update && sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev gfortran libblas-dev liblapack-dev -y
     - ./bin/compile
   after_success: ./bin/archive
   after_failure: cat /tmp/python-build.*.log
@@ -71,20 +82,8 @@ jobs:
         - sudo python -m ensurepip
         - sudo python -m pip install --upgrade pip
         - sudo python -m pip install virtualenv==20.0.2
-    
-    - <<: *defaults_linux
-      dist: noble
-      env:
-        - RELEASE=noble
-      name: noble
 
-    - <<: *defaults_linux
-      arch: arm64
-      dist: noble
-      env:
-        - RELEASE=noble
-      name: noble-arm64
-
+    # Zadania Linux – dziedziczą konfigurację z defaults_linux
     - <<: *defaults_linux
       dist: jammy
       env:
@@ -135,7 +134,6 @@ jobs:
       dist: bionic
       env:
         - RELEASE=bionic
-        - NUMPY_VERSION=1.21.6
       name: bionic-ppc64le
 
     - <<: *defaults_linux
@@ -143,9 +141,9 @@ jobs:
       dist: xenial
       env:
         - RELEASE=xenial
-        - NUMPY_VERSION=1.21.6
       name: xenial-ppc64le
 
+    # Wersje dla architektury s390x
     - <<: *defaults_linux
       arch: s390x
       dist: jammy
@@ -165,17 +163,16 @@ jobs:
       dist: bionic
       env:
         - RELEASE=bionic
-        - NUMPY_VERSION=1.21.6
       name: bionic-s390x
-      
+
     - <<: *defaults_linux
       arch: s390x
       dist: xenial
       env:
         - RELEASE=xenial
-        - NUMPY_VERSION=1.21.6
       name: xenial-s390x
 
+    # Wersje dla architektury arm64
     - <<: *defaults_linux
       arch: arm64
       dist: jammy
@@ -203,6 +200,6 @@ jobs:
       env:
         - RELEASE=xenial
       name: xenial-arm64
-      
+
 allow_failures:
   - name: freebsd
