--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: shell
 
 env:
   global:
-    - VERSION=3.10
+    - VERSION=3.10.1
   # - ALIAS=nightly
 
 # Wspólna konfiguracja dla jobów Linux
@@ -110,6 +110,11 @@ jobs:
         - RELEASE=xenial
       name: xenial
       install:
+        - pushd /opt/pyenv/
+        - sudo git config --global --add safe.directory /opt/pyenv
+        - sudo git checkout master
+        - sudo git pull
+        - popd
         - sudo apt-get update
         - sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
         - python3 --version
