--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,13 @@ defaults_linux: &defaults_linux
     - sudo git pull
     - popd
     - alias python=python3
+    # Dodatkowe polecenia dla Xenial (lub innej wersji, jeśli zajdzie potrzeba)
+    - |
+      if [ "$RELEASE" = "xenial" ]; then
+        sudo apt-get update
+        sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
+        python3 --version
+      fi
     - python3 -m pip install --upgrade pip setuptools virtualenv
 
   before_script:
@@ -34,11 +41,14 @@ defaults_linux: &defaults_linux
         source ~/virtualenv/pypy/bin/activate
         python --version
       fi
+
   script:
     - sudo apt-get update && sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev gfortran libblas-dev liblapack-dev -y
     - ./bin/compile
+
   after_success: ./bin/archive
   after_failure: cat /tmp/python-build.*.log
+
   addons:
     apt:
       packages:
@@ -72,7 +82,7 @@ jobs:
         - sudo python -m ensurepip
         - sudo python -m pip install --upgrade pip
         - sudo python -m pip install virtualenv==20.0.2
-    
+
     - <<: *defaults_linux
       dist: noble
       env:
@@ -104,22 +114,11 @@ jobs:
         - RELEASE=bionic
       name: bionic
 
-    # Dla xenial używamy własnego bloku install, nadpisując część z defaults_linux
     - <<: *defaults_linux
       dist: xenial
       env:
         - RELEASE=xenial
       name: xenial
-      install:
-        - pushd /opt/pyenv/
-        - sudo git config --global --add safe.directory /opt/pyenv
-        - sudo git checkout master
-        - sudo git pull
-        - popd
-        - sudo apt-get update
-        - sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
-        - python3 --version
-        - python3 -m pip install --upgrade pip setuptools virtualenv
 
     # Wersje dla architektury ppc64le
     - <<: *defaults_linux
@@ -173,7 +172,7 @@ jobs:
         - RELEASE=bionic
         - NUMPY_VERSION=1.21.6
       name: bionic-s390x
-      
+
     - <<: *defaults_linux
       arch: s390x
       dist: xenial
