--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ defaults_linux: &defaults_linux
 
   before_script:
     - export PATH="/opt/python/${VERSION}/bin"
-    - echo "PATH: $PATH"
+    - "echo PATH: \$PATH"
     - export INSTALL_DEST=${INSTALL_DEST:-/opt/python}
     - export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs)}
     - export OS_NAME=${OS_NAME:-$(lsb_release -is | tr "A-Z" "a-z")}
