--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,16 @@ defaults_linux: &defaults_linux
     - |
       if [ "$RELEASE" = "xenial" ]; then
         sudo apt-get update
-        sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
+        sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev wget build-essential checkinstall zlib1g-dev
         python3 --version
+        # Pobranie i kompilacja nowszego OpenSSL
+        wget https://www.openssl.org/source/openssl-1.1.1u.tar.gz
+        tar xzf openssl-1.1.1u.tar.gz
+        cd openssl-1.1.1u
+        ./config --prefix=/usr/local/openssl --openssldir=/usr/local/openssl shared zlib
+        make -j4
+        sudo make install
+        cd ..
       fi
     - python3 -m pip install --upgrade pip setuptools virtualenv
 
@@ -29,7 +37,13 @@ defaults_linux: &defaults_linux
     - export OS_NAME=${OS_NAME:-$(lsb_release -is | tr "A-Z" "a-z")}
     - export ARCH=${ARCH:-$(uname -m)}
     - export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}
-    - export PYTHON_CONFIGURE_OPTS="--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS"
+    # Uaktualnienie opcji konfiguracji – dla Xenial dodajemy informację o nowszym OpenSSL
+    - |
+      if [ "$RELEASE" = "xenial" ]; then
+        export PYTHON_CONFIGURE_OPTS="--with-openssl=/usr/local/openssl --with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS"
+      else
+        export PYTHON_CONFIGURE_OPTS="--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS"
+      fi
     - sudo chown -R $USER $HOME/.cache
     - |
       if [[ $VERSION = pypy*-dev ]]; then
@@ -43,7 +57,6 @@ defaults_linux: &defaults_linux
 
   script:
     - sudo apt-get update && sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev gfortran libblas-dev liblapack-dev -y
-    - export PATH="/opt/python/3.12.3/bin:$PATH"
     - ./bin/compile
 
   after_success: ./bin/archive
