--- a/.travis.yml
+++ b/.travis.yml
@@ -126,10 +126,64 @@ jobs:
         - sudo python -m pip install virtualenv==20.0.2
 
     - <<: *defaults_linux
+      dist: noble
+      env:
+        - RELEASE=noble
+      name: noble
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: noble
+      env:
+        - RELEASE=noble
+      name: noble-arm64
+
+    - <<: *defaults_linux
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy
+
+    - <<: *defaults_linux
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal
+
+    - <<: *defaults_linux
+      dist: bionic
+      env:
+        - RELEASE=bionic
+      name: bionic
+
+    - <<: *defaults_linux
       dist: xenial
       env:
         - RELEASE=xenial
       name: xenial
+
+    # Wersje dla architektury ppc64le
+    - <<: *defaults_linux
+      arch: ppc64le
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy-ppc64le
+
+    - <<: *defaults_linux
+      arch: ppc64le
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal-ppc64le
+
+    - <<: *defaults_linux
+      arch: ppc64le
+      dist: bionic
+      env:
+        - RELEASE=bionic
+        - NUMPY_VERSION=1.21.6
+      name: bionic-ppc64le
 
     - <<: *defaults_linux
       arch: ppc64le
@@ -141,11 +195,54 @@ jobs:
 
     - <<: *defaults_linux
       arch: s390x
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy-s390x
+
+    - <<: *defaults_linux
+      arch: s390x
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal-s390x
+
+    - <<: *defaults_linux
+      arch: s390x
+      dist: bionic
+      env:
+        - RELEASE=bionic
+        - NUMPY_VERSION=1.21.6
+      name: bionic-s390x
+
+    - <<: *defaults_linux
+      arch: s390x
       dist: xenial
       env:
         - RELEASE=xenial
         - NUMPY_VERSION=1.21.6
       name: xenial-s390x
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: jammy
+      env:
+        - RELEASE=jammy
+      name: jammy-arm64
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: focal
+      env:
+        - RELEASE=focal
+      name: focal-arm64
+
+    - <<: *defaults_linux
+      arch: arm64
+      dist: bionic
+      env:
+        - RELEASE=bionic
+      name: bionic-arm64
 
     - <<: *defaults_linux
       arch: arm64
