--- a/.travis.yml
+++ b/.travis.yml
@@ -180,7 +180,7 @@ jobs:
       dist: bionic
       env:
         - RELEASE=bionic
-        - NUMPY_VERSION=2.2.3
+       # - NUMPY_VERSION=2.2.3
       name: bionic-ppc64le
 
    # - <<: *defaults_linux
@@ -210,7 +210,7 @@ jobs:
       dist: bionic
       env:
         - RELEASE=bionic
-        - NUMPY_VERSION=1.21.6
+       # - NUMPY_VERSION=2.2.3
       name: bionic-s390x
 
   #  - <<: *defaults_linux
